appId: ${APP_ID:-com.anonymous.whether}
---
- launchApp
- tapOn:
    id: "location-input"
- eraseText
- inputText: "Berlin"
- hideKeyboard
- assertVisible: ".*Searching.*|.*Berlin.*"
- extendedWaitUntil:
    visible: ".*Berlin, .*Germany.*"
    timeout: 10000
- tapOn: ".*Berlin, .*Germany.*"
- assertVisible: ".*Berlin, .*Germany.*"
